--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,18 @@
                   <target>1.8</target>
               </configuration>
           </plugin>
+          <plugin>
+              <groupId>org.owasp</groupId>
+              <artifactId>dependency-check-maven</artifactId>
+              <version>5.0.0-M1</version>
+              <executions>
+                  <execution>
+                      <goals>
+                          <goal>check</goal>
+                      </goals>
+                  </execution>
+              </executions>
+          </plugin>
       </plugins>
     <finalName>JavaVulnerableLab</finalName>
   </build>
